# santa_game

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  buffer.cpp  buffer.hpp  button.cpp  button.hpp  file.cpp  file.hpp  game.cpp  game.hpp  kid.cpp  kid.hpp  level.cpp  level.hpp  main.cpp  object.cpp  object.hpp  render.cpp  render.hpp  setting.hpp  text.cpp  text.hpp  window.cpp  window.hpp
tests/: CMakeLists.txt  test_buffer.cpp  test_object.cpp
